log/build_2025-01-14_12-30-31/vision/stderr.log
  File "/home/mo/Thesis/install/vision/lib/python3.8/site-packages/vision/yolov8_inference.py", line 88
    verbose = False)
            ^
SyntaxError: invalid syntax

